[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
const_format = "0.2.33"
dashmap = "6.1.0"
pico-args = "0.5.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winnow = { version = "0.6.18", features = ["simd"] }

[dev-dependencies]
tokio-test = "0.4.4"
